Expose App title in the API (#42)
* Expose App title in the API

* Make rubocop happy
